--- a/src/html/components/buttons.hbs
+++ b/src/html/components/buttons.hbs
@@ -9,7 +9,8 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "layouts/article" title="Default w/ Label"}}
   {{#content "body"}}
     <button class="c-button">Button</button>
-    <input type="button" class="c-button" value="Input">
+    <input type="button" class="c-button" value="Input (Button)">
+    <input type="submit" class="c-button" value="Input (Submit)">
     <a href="#" class="c-button">Link</a>
   {{/content}}
   {{/embed}}
@@ -64,7 +65,8 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "layouts/article" title="Highlighted"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight">Button</button>
-    <input type="button" class="c-button c-button--highlight" value="Input">
+    <input type="button" class="c-button c-button--highlight" value="Input (Button)">
+    <input type="submit" class="c-button c-button--highlight" value="Input (Submit)">
     <a href="#" class="c-button c-button--highlight">Link</a>
   {{/content}}
   {{/embed}}
