--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -9,25 +9,25 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Text Inputs" body-class="light"}}
   {{#content "body"}}
     <label for="text" class="u-sr-only">Text input</label>
-    <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--text">
+    <input type="text" id="text" placeholder="Text">
 
     <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
-    <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--text" disabled>
+    <input type="text" id="text-disabled" placeholder="Text (disabled)" disabled>
 
     <label for="email" class="u-sr-only">E-mail input</label>
-    <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--text">
+    <input type="email" id="email" placeholder="E-mail">
 
     <label for="password" class="u-sr-only">Password input</label>
-    <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--text">
+    <input type="password" id="password" placeholder="Password">
 
     <label for="search" class="u-sr-only">Search input</label>
-    <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--text c-form-field--icon">
+    <input type="search" id="search" placeholder="Search" class="c-input--icon-search">
 
     <label for="url" class="u-sr-only">URL input</label>
-    <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--text">
+    <input type="url" id="url" placeholder="URL">
 
     <label for="number" class="u-sr-only">Number input</label>
-    <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--text">
+    <input type="number" id="number" placeholder="7">
   {{/content}}
   {{/embed}}
 
@@ -35,25 +35,25 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Text Inputs (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="text" class="u-sr-only">Text input</label>
-    <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--dark c-form-field--text">
+    <input type="text" id="text" placeholder="Text" class="c-input--dark">
 
     <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
-    <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--dark c-form-field--text" disabled>
+    <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-input--dark" disabled>
 
     <label for="email" class="u-sr-only">E-mail input</label>
-    <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--dark c-form-field--text">
+    <input type="email" id="email" placeholder="E-mail" class="c-input--dark">
 
     <label for="password" class="u-sr-only">Password input</label>
-    <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--dark c-form-field--text">
+    <input type="password" id="password" placeholder="Password" class="c-input--dark">
 
     <label for="search" class="u-sr-only">Search input</label>
-    <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--dark c-form-field--text c-form-field--icon">
+    <input type="search" id="search" placeholder="Search" class="c-input--dark c-input--icon-search">
 
     <label for="url" class="u-sr-only">URL input</label>
-    <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--dark c-form-field--text">
+    <input type="url" id="url" placeholder="URL" class="c-input--dark">
 
     <label for="number" class="u-sr-only">Number input</label>
-    <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--dark c-form-field--text">
+    <input type="number" id="number" placeholder="7" class="c-input--dark">
   {{/content}}
   {{/embed}}
 
@@ -61,10 +61,10 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Textarea" body-class="light"}}
   {{#content "body"}}
     <label for="textarea" class="u-sr-only">Textarea</label>
-    <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--textarea"></textarea>
+    <textarea id="textarea" placeholder="Textarea" rows="5"></textarea>
 
     <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
-    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--textarea" disabled></textarea>
+    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" disabled></textarea>
   {{/content}}
   {{/embed}}
 
@@ -72,10 +72,10 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Textarea (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="textarea" class="u-sr-only">Textarea</label>
-    <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea"></textarea>
+    <textarea id="textarea" placeholder="Textarea" rows="5" class="c-input--dark"></textarea>
 
     <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
-    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea" disabled></textarea>
+    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-input--dark" disabled></textarea>
   {{/content}}
   {{/embed}}
 
@@ -83,7 +83,7 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Select" body-class="light"}}
   {{#content "body"}}
     <label for="select-1" class="u-sr-only">Select input</label>
-    <select id="select-1" class="c-form-field c-form-field--select c-form-field--icon">
+    <select id="select-1">
       <option value="select-1">Option 1</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
@@ -91,7 +91,7 @@ description: Users input things. The server gets things.
     </select>
 
     <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-    <select id="select-2" class="c-form-field c-form-field--select c-form-field--icon" disabled>
+    <select id="select-2" disabled>
       <option value="select-1">Option 1</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
@@ -104,7 +104,7 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Select (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="select-1" class="u-sr-only">Select input</label>
-    <select id="select-1" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon">
+    <select id="select-1" class="c-input--dark">
       <option value="select-1">Option 1</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
@@ -112,7 +112,7 @@ description: Users input things. The server gets things.
     </select>
 
     <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-    <select id="select-2" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon" disabled>
+    <select id="select-2" class="c-input--dark" disabled>
       <option value="select-1">Option 1</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
@@ -124,40 +124,80 @@ description: Users input things. The server gets things.
 
   {{#embed "layouts/article" title="Radio"}}
   {{#content "body"}}
-    <input type="radio" name="radio" value="radio-1" id="radio-1" class="c-form-choice c-form-choice--radio" checked>
-    <label for="radio-1">Radio #1</label>
+    <input type="radio" name="radio-1" value="radio-1-1" id="radio-1-1" checked>
+    <label for="radio-1-1">Radio #1</label>
 
-    <input type="radio" name="radio" value="radio-2" id="radio-2" class="c-form-choice c-form-choice--radio">
-    <label for="radio-2">Radio #2</label>
+    <input type="radio" name="radio-1" value="radio-1-2" id="radio-1-2">
+    <label for="radio-1-2">Radio #2</label>
 
-    <input type="radio" name="radio" value="radio-3" id="radio-3" class="c-form-choice c-form-choice--radio" disabled>
-    <label for="radio-3">Radio #3 (disabled)</label>
+    <input type="radio" name="radio-1" value="radio-1-3" id="radio-1-3" disabled>
+    <label for="radio-1-3">Radio #3 (disabled)</label>
 
-    <input type="radio" name="radio" value="radio-4" id="radio-4" class="c-form-choice c-form-choice--radio">
-    <label for="radio-4">Radio #4</label>
+    <input type="radio" name="radio-1" value="radio-41-" id="radio-1-4">
+    <label for="radio-1-4">Radio #4</label>
 
-    <input type="radio" name="radio2" value="radio" id="radio2" class="c-form-choice c-form-choice--radio" disabled checked>
-    <label for="radio2">Radio (checked, disabled)</label>
+    <input type="radio" name="radio-1add" value="radio" id="radio-1add" disabled checked>
+    <label for="radio-1add">Radio (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
 
   {{#embed "layouts/article" title="Checkbox"}}
   {{#content "body"}}
-    <input type="checkbox" name="checkbox" value="checkbox-1" id="checkbox-1" class="c-form-choice c-form-choice--checkbox" checked>
-    <label for="checkbox-1">Checkbox #1 (checked)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-1" id="checkbox-1-1" checked>
+    <label for="checkbox-1-1">Checkbox #1 (checked)</label>
 
-    <input type="checkbox" name="checkbox" value="checkbox-2" id="checkbox-2" class="c-form-choice c-form-choice--checkbox">
-    <label for="checkbox-2">Checkbox #2</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-2" id="checkbox-1-2">
+    <label for="checkbox-1-2">Checkbox #2</label>
 
-    <input type="checkbox" name="checkbox" value="checkbox-3" id="checkbox-3" class="c-form-choice c-form-choice--checkbox" disabled>
-    <label for="checkbox-3">Checkbox #3 (disabled)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-3" id="checkbox-1-3" disabled>
+    <label for="checkbox-1-3">Checkbox #3 (disabled)</label>
 
-    <input type="checkbox" name="checkbox" value="checkbox-4" id="checkbox-4" class="c-form-choice c-form-choice--checkbox">
-    <label for="checkbox-4">Checkbox #4</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-4" id="checkbox-1-4">
+    <label for="checkbox-1-4">Checkbox #4</label>
 
-    <input type="checkbox" name="checkbox" value="checkbox-5" id="checkbox-5" class="c-form-choice c-form-choice--checkbox" disabled checked>
-    <label for="checkbox-5">Checkbox #5 (checked, disabled)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-5" id="checkbox-1-5" disabled checked>
+    <label for="checkbox-1-5">Checkbox #5 (checked, disabled)</label>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Radio (dark)" body-class="dark"}}
+  {{#content "body"}}
+    <input type="radio" name="radio-2" value="radio-1" id="radio-2-1" class="c-input--dark" checked>
+    <label for="radio-2-1">Radio #1</label>
+
+    <input type="radio" name="radio-2" value="radio-2" id="radio-2-2" class="c-input--dark">
+    <label for="radio-2-2">Radio #2</label>
+
+    <input type="radio" name="radio-2" value="radio-3" id="radio-2-3" class="c-input--dark" disabled>
+    <label for="radio-2-3">Radio #3 (disabled)</label>
+
+    <input type="radio" name="radio-2" value="radio-4" id="radio-2-4" class="c-input--dark">
+    <label for="radio-2-4">Radio #4</label>
+
+    <input type="radio" name="radio-2add" value="radio" id="radio-2add" class="c-input--dark" disabled checked>
+    <label for="radio-2add">Radio (checked, disabled)</label>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Checkbox (dark)" body-class="dark"}}
+  {{#content "body"}}
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-1" id="checkbox-2-1" class="c-input--dark" checked>
+    <label for="checkbox-2-1">Checkbox #1 (checked)</label>
+
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-2" id="checkbox-2-2" class="c-input--dark">
+    <label for="checkbox-2-2">Checkbox #2</label>
+
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-3" id="checkbox-2-3" class="c-input--dark" disabled>
+    <label for="checkbox-2-3">Checkbox #3 (disabled)</label>
+
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-4" id="checkbox-2-4" class="c-input--dark">
+    <label for="checkbox-2-4">Checkbox #4</label>
+
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-5" id="checkbox-2-5" class="c-input--dark" disabled checked>
+    <label for="checkbox-2-5">Checkbox #5 (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
