--- a/src/html/partials/includes/action-bar-domain.hbs
+++ b/src/html/partials/includes/action-bar-domain.hbs
@@ -8,7 +8,7 @@
 
   <div class="c-action-bar__group c-action-bar__group--grow">
     <label for="filter" class="u-sr-only">Filter</label>
-    <input type="search" id="filter" placeholder="Filter" class="c-form-field c-form-field--text c-form-field--icon c-form-field--no-margin">
+    <input type="search" id="filter" placeholder="Filter" class="c-input--no-margin">
   </div>
 
   <div class="c-action-bar__group">
