--- a/src/html/partials/includes/box-login.hbs
+++ b/src/html/partials/includes/box-login.hbs
@@ -3,13 +3,13 @@
   <div class="c-box__content">
     <form>
       <label for="user" class="u-sr-only">Username</label>
-      <input type="text" id="user" placeholder="Username" class="c-form-field c-form-field--text">
+      <input type="text" id="user" placeholder="Username">
 
       <label for="password" class="u-sr-only">Password</label>
-      <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--text">
+      <input type="password" id="password" placeholder="Password">
 
       <input type="submit" value="Submit" class="c-button c-button--highlight">
-      <a href="#" class="c-form-additional-link">Forgot password?</a>
+      <a href="#" class="c-button-additional-link">Forgot password?</a>
     </form>
   </div>
 </div>
