--- a/src/html/partials/includes/form-autocomplete.hbs
+++ b/src/html/partials/includes/form-autocomplete.hbs
@@ -1,6 +1,6 @@
 <div class="c-form-autocomplete  js-form-autocomplete">
   <label for="domain" class="u-sr-only">Search Domain</label>
-  <input type="text" id="domain" placeholder="Search Domain" class="c-form-field c-form-field--text c-form-field--dark c-form-field--icon  c-form-autocomplete__input  js-form-autocomplete-input">
+  <input type="text" id="domain" placeholder="Search Domain" class="c-input--dark c-input--icon-search  c-form-autocomplete__input  js-form-autocomplete-input">
 
   <div class="c-form-autocomplete__panel  js-form-autocomplete-panel">
     <ul class="c-form-autocomplete__list">
