--- a/src/html/partials/includes/list-alias-inactive.hbs
+++ b/src/html/partials/includes/list-alias-inactive.hbs
@@ -18,7 +18,7 @@
 
   <div class="c-list__group c-list__group--actions  js-toggle-panel">
     <div class="c-list__action-group">
-      <input type="checkbox" id="inactive" class="c-form-choice c-form-choice--checkbox">
+      <input type="checkbox" id="inactive">
       <label for="inactive">Aktiv</label>
     </div>
 
