--- a/src/html/partials/includes/list-domain.hbs
+++ b/src/html/partials/includes/list-domain.hbs
@@ -12,7 +12,7 @@
 
   <div class="c-list__group c-list__group--actions  js-toggle-panel">
     <div class="c-list__action-group">
-      <input type="checkbox" id="active" checked class="c-form-choice c-form-choice--checkbox">
+      <input type="checkbox" id="active" checked>
       <label for="active">Aktiv</label>
     </div>
 
