--- a/src/html/partials/includes/box-form.hbs
+++ b/src/html/partials/includes/box-form.hbs
@@ -3,15 +3,15 @@
   <div class="c-box__content">
     <form>
       <label for="password1" class="u-sr-only">Password</label>
-      <input type="password" id="password1" placeholder="Password" class="c-form-field c-form-field--text">
+      <input type="password" id="password1" placeholder="Password">
 
       <label for="password2" class="u-sr-only">Repeat Password</label>
-      <input type="password" id="password2" placeholder="Repeat Password" class="c-form-field c-form-field--text">
+      <input type="password" id="password2" placeholder="Repeat Password">
 
       <label for="forward" class="u-sr-only">Forward</label>
-      <input type="email" id="forward" placeholder="Forward" class="c-form-field c-form-field--text">
+      <input type="email" id="forward" placeholder="Forward">
 
-      <input type="checkbox" id="catch-all" class="c-form-choice c-form-choice--checkbox">
+      <input type="checkbox" id="catch-all">
       <label for="catch-all">Catch-All</label>
     </form>
   </div>
