Combine dropdown and form-autocomplete CSS

--- a/src/html/components/dropdown.hbs
+++ b/src/html/components/dropdown.hbs
@@ -29,7 +29,7 @@ description: Click a button and an awesome menu pops up.
 
   {{#embed "layouts/article" title="Form Autocomplete"}}
   {{#content "body"}}
-    {{> includes/form-autocomplete}}
+    {{> includes/dropdown-form}}
   {{/content}}
   {{/embed}}
 
