--- a/src/html/partials/includes/dropdown-text.hbs
+++ b/src/html/partials/includes/dropdown-text.hbs
@@ -4,10 +4,15 @@
     <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel  js-toggle-panel">
-    <p>Stuff within the dropdown menu.</p>
-    <p>Stuff within the dropdown menu.</p>
-    <p>Stuff within the dropdown menu.</p>
+  <div class="c-dropdown__panel c-dropdown__panel--menu  js-toggle-panel">
+    <ul class="c-dropdown__list">
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link c-dropdown__link--muted">Footer Link</a></li>
+    </ul>
   </div>
 </div>
 
@@ -18,9 +23,14 @@
     <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel c-dropdown__panel--to-left  js-toggle-panel">
-    <p>Stuff within the dropdown menu.</p>
-    <p>Stuff within the dropdown menu.</p>
-    <p>Stuff within the dropdown menu.</p>
+  <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu  js-toggle-panel">
+    <ul class="c-dropdown__list">
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link c-dropdown__link--muted">Footer Link</a></li>
+    </ul>
   </div>
 </div>
