--- a/src/html/partials/includes/header-account.hbs
+++ b/src/html/partials/includes/header-account.hbs
@@ -2,7 +2,7 @@
   {{> includes/logo-header}}
 
   <div class="c-action-bar__group">
-    {{> includes/form-autocomplete}}
+    {{> includes/dropdown-form}}
 
     <div class="c-dropdown  js-dropdown">
       <button class="c-button c-button--icon  c-dropdown__button  js-toggle-button">
@@ -11,10 +11,15 @@
         <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
       </button>
 
-      <div class="c-dropdown__panel c-dropdown__panel--to-left  js-toggle-panel">
-        <p>Stuff within the dropdown menu.</p>
-        <p>Stuff within the dropdown menu.</p>
-        <p>Stuff within the dropdown menu.</p>
+      <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu  js-toggle-panel">
+        <ul class="c-dropdown__list">
+          <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+          <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+          <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+          <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+
+          <li class="c-dropdown__item"><a href="#" class="c-dropdown__link c-dropdown__link--muted">Footer Link</a></li>
+        </ul>
       </div>
     </div>
 
