--- a/src/html/components/header.hbs
+++ b/src/html/components/header.hbs
@@ -6,16 +6,16 @@ description: The Beginning of Everything.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Domain"}}
+  {{#embed "layouts/article" title="Default"}}
   {{#content "body"}}
-    {{> includes/header-domain}}
+    {{> includes/header-default}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Account"}}
+  {{#embed "layouts/article" title="Notification"}}
   {{#content "body"}}
-    {{> includes/header-account}}
+    {{> includes/header-notification}}
   {{/content}}
   {{/embed}}
 
