--- a/src/html/partials/includes/dropdown-form.hbs
+++ b/src/html/partials/includes/dropdown-form.hbs
@@ -4,10 +4,11 @@
 
   <div class="c-dropdown__panel  js-form-autocomplete-panel">
     <ul class="c-dropdown__list">
-      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
-      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
-      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
-      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">awesome-pictures.com</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">business.biz</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">crazy-professor.net</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">domain-example.hamburg</a></li>
+      <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">example-domain-name.com</a></li>
 
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link c-dropdown__link--muted">Footer Link</a></li>
     </ul>
