--- a/src/html/partials/includes/header-default.hbs
+++ b/src/html/partials/includes/header-default.hbs
@@ -1,7 +1,7 @@
 <header class="c-action-bar c-action-bar--dark">
-  {{> includes/logo-header}}
-
-  <div class="c-action-bar__group c-action-bar__group--grow  js-notification-container"></div>
+  <div class="c-action-bar__group c-action-bar__group--grow">
+    {{> includes/logo-header}}
+  </div>
 
   <div class="c-action-bar__group">
     {{> includes/dropdown-form}}
