--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -148,6 +148,10 @@
   }
 }
 
+.c-icon-button--light {
+  color: $color-white;
+}
+
   .c-icon-button__icon {
     position: absolute;
     height: 1.8em;
