--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -65,6 +65,7 @@ Naming convention for CSS classes
 @import 'components/header';
 @import 'components/list';
 @import 'components/logo';
+@import 'components/notification';
 @import 'components/side-nav';
 
 
