--- a/src/html/partials/includes/header-notification-error.hbs
+++ b/src/html/partials/includes/header-notification-error.hbs
@@ -3,6 +3,10 @@
     {{> includes/logo-header}}
   </div>
 
+  <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container">
+    {{> includes/notification-error}}
+  </div>
+
   <div class="c-action-bar__group">
     {{> includes/dropdown-form}}
   </div>
