--- a/src/html/partials/includes/header-notification-success.hbs
+++ b/src/html/partials/includes/header-notification-success.hbs
@@ -3,7 +3,9 @@
     {{> includes/logo-header}}
   </div>
 
-  <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container"></div>
+  <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container">
+    {{> includes/notification-success}}
+  </div>
 
   <div class="c-action-bar__group">
     {{> includes/dropdown-form}}
