--- a/src/css/components/_action-bar.scss
+++ b/src/css/components/_action-bar.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   padding: 0.6rem;
 
   // Component size
@@ -21,6 +22,8 @@
 
   @media (min-width: $break-md-min) {
     height: 4em;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
