--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -11,6 +11,9 @@ description: Users input things. The server gets things.
     <label for="text" class="u-sr-only">Text input</label>
     <input type="text" id="text" placeholder="Text">
 
+    <label for="text" class="u-sr-only">Text input (error)</label>
+    <input type="text" id="text" placeholder="Text (error)" class="has-error">
+
     <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
     <input type="text" id="text-disabled" placeholder="Text (disabled)" disabled>
 
@@ -36,6 +39,9 @@ description: Users input things. The server gets things.
   {{#content "body"}}
     <label for="text" class="u-sr-only">Text input</label>
     <input type="text" id="text" placeholder="Text" class="c-input--dark">
+
+    <label for="text" class="u-sr-only">Text input (error)</label>
+    <input type="text" id="text" placeholder="Text (error)" class="c-input--dark has-error">
 
     <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
     <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-input--dark" disabled>
@@ -63,6 +69,9 @@ description: Users input things. The server gets things.
     <label for="textarea" class="u-sr-only">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5"></textarea>
 
+    <label for="textarea" class="u-sr-only">Textarea (error)</label>
+    <textarea id="textarea" placeholder="Textarea (error)" rows="5" class="has-error"></textarea>
+
     <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
     <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" disabled></textarea>
   {{/content}}
@@ -73,6 +82,9 @@ description: Users input things. The server gets things.
   {{#content "body"}}
     <label for="textarea" class="u-sr-only">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5" class="c-input--dark"></textarea>
+
+    <label for="textarea" class="u-sr-only">Textarea (error)</label>
+    <textarea id="textarea" placeholder="Textarea (error)" rows="5" class="c-input--dark has-error"></textarea>
 
     <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
     <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-input--dark" disabled></textarea>
@@ -90,9 +102,17 @@ description: Users input things. The server gets things.
       <option value="select-4">Option 4</option>
     </select>
 
-    <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-    <select id="select-2" disabled>
-      <option value="select-1">Option 1</option>
+    <label for="select-2" class="u-sr-only">Select input (error)</label>
+    <select id="select-2" class="has-error">
+      <option value="select-1">Option 1 (error)</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+
+    <label for="select-3" class="u-sr-only">Select input (disabled)</label>
+    <select id="select-3" disabled>
+      <option value="select-1">Option 1 (disabled)</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
       <option value="select-4">Option 4</option>
@@ -103,17 +123,25 @@ description: Users input things. The server gets things.
 
   {{#embed "layouts/article" title="Select (dark)" body-class="dark"}}
   {{#content "body"}}
-    <label for="select-1" class="u-sr-only">Select input</label>
-    <select id="select-1" class="c-input--dark">
+    <label for="select-4" class="u-sr-only">Select input</label>
+    <select id="select-4" class="c-input--dark">
       <option value="select-1">Option 1</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
       <option value="select-4">Option 4</option>
     </select>
 
-    <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-    <select id="select-2" class="c-input--dark" disabled>
-      <option value="select-1">Option 1</option>
+    <label for="select-5" class="u-sr-only">Select input</label>
+    <select id="select-5" class="c-input--dark has-error">
+      <option value="select-1">Option 1 (error)</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+
+    <label for="select-6" class="u-sr-only">Select input (disabled)</label>
+    <select id="select-6" class="c-input--dark" disabled>
+      <option value="select-1">Option 1 (disabled)</option>
       <option value="select-2">Option 2</option>
       <option value="select-3">Option 3</option>
       <option value="select-4">Option 4</option>
@@ -125,16 +153,19 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Radio"}}
   {{#content "body"}}
     <input type="radio" name="radio-1" value="radio-1-1" id="radio-1-1" checked>
-    <label for="radio-1-1">Radio #1</label>
+    <label for="radio-1-1">Radio</label>
 
     <input type="radio" name="radio-1" value="radio-1-2" id="radio-1-2">
-    <label for="radio-1-2">Radio #2</label>
+    <label for="radio-1-2">Radio</label>
+
+    <input type="radio" name="radio-1" value="radio-1-2" id="radio-1-2" class="has-error">
+    <label for="radio-1-2">Radio (error)</label>
 
     <input type="radio" name="radio-1" value="radio-1-3" id="radio-1-3" disabled>
-    <label for="radio-1-3">Radio #3 (disabled)</label>
+    <label for="radio-1-3">Radio (disabled)</label>
 
     <input type="radio" name="radio-1" value="radio-41-" id="radio-1-4">
-    <label for="radio-1-4">Radio #4</label>
+    <label for="radio-1-4">Radio</label>
 
     <input type="radio" name="radio-1add" value="radio" id="radio-1add" disabled checked>
     <label for="radio-1add">Radio (checked, disabled)</label>
@@ -145,19 +176,22 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Checkbox"}}
   {{#content "body"}}
     <input type="checkbox" name="checkbox-1" value="checkbox-1-1" id="checkbox-1-1" checked>
-    <label for="checkbox-1-1">Checkbox #1 (checked)</label>
+    <label for="checkbox-1-1">Checkbox (checked)</label>
 
     <input type="checkbox" name="checkbox-1" value="checkbox-1-2" id="checkbox-1-2">
-    <label for="checkbox-1-2">Checkbox #2</label>
+    <label for="checkbox-1-2">Checkbox</label>
+
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-2" id="checkbox-1-2" class="has-error">
+    <label for="checkbox-1-2">Checkbox (error)</label>
 
     <input type="checkbox" name="checkbox-1" value="checkbox-1-3" id="checkbox-1-3" disabled>
-    <label for="checkbox-1-3">Checkbox #3 (disabled)</label>
+    <label for="checkbox-1-3">Checkbox (disabled)</label>
 
     <input type="checkbox" name="checkbox-1" value="checkbox-1-4" id="checkbox-1-4">
-    <label for="checkbox-1-4">Checkbox #4</label>
+    <label for="checkbox-1-4">Checkbox</label>
 
     <input type="checkbox" name="checkbox-1" value="checkbox-1-5" id="checkbox-1-5" disabled checked>
-    <label for="checkbox-1-5">Checkbox #5 (checked, disabled)</label>
+    <label for="checkbox-1-5">Checkbox (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
@@ -165,16 +199,19 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Radio (dark)" body-class="dark"}}
   {{#content "body"}}
     <input type="radio" name="radio-2" value="radio-1" id="radio-2-1" class="c-input--dark" checked>
-    <label for="radio-2-1">Radio #1</label>
+    <label for="radio-2-1">Radio</label>
 
     <input type="radio" name="radio-2" value="radio-2" id="radio-2-2" class="c-input--dark">
-    <label for="radio-2-2">Radio #2</label>
+    <label for="radio-2-2">Radio</label>
+
+    <input type="radio" name="radio-2" value="radio-2" id="radio-2-2" class="c-input--dark has-error">
+    <label for="radio-2-2">Radio (error)</label>
 
     <input type="radio" name="radio-2" value="radio-3" id="radio-2-3" class="c-input--dark" disabled>
-    <label for="radio-2-3">Radio #3 (disabled)</label>
+    <label for="radio-2-3">Radio (disabled)</label>
 
     <input type="radio" name="radio-2" value="radio-4" id="radio-2-4" class="c-input--dark">
-    <label for="radio-2-4">Radio #4</label>
+    <label for="radio-2-4">Radio</label>
 
     <input type="radio" name="radio-2add" value="radio" id="radio-2add" class="c-input--dark" disabled checked>
     <label for="radio-2add">Radio (checked, disabled)</label>
@@ -185,19 +222,22 @@ description: Users input things. The server gets things.
   {{#embed "layouts/article" title="Checkbox (dark)" body-class="dark"}}
   {{#content "body"}}
     <input type="checkbox" name="checkbox-2" value="checkbox-2-1" id="checkbox-2-1" class="c-input--dark" checked>
-    <label for="checkbox-2-1">Checkbox #1 (checked)</label>
+    <label for="checkbox-2-1">Checkbox (checked)</label>
 
     <input type="checkbox" name="checkbox-2" value="checkbox-2-2" id="checkbox-2-2" class="c-input--dark">
-    <label for="checkbox-2-2">Checkbox #2</label>
+    <label for="checkbox-2-2">Checkbox</label>
+
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-2" id="checkbox-2-2" class="c-input--dark has-error">
+    <label for="checkbox-2-2">Checkbox (error)</label>
 
     <input type="checkbox" name="checkbox-2" value="checkbox-2-3" id="checkbox-2-3" class="c-input--dark" disabled>
-    <label for="checkbox-2-3">Checkbox #3 (disabled)</label>
+    <label for="checkbox-2-3">Checkbox (disabled)</label>
 
     <input type="checkbox" name="checkbox-2" value="checkbox-2-4" id="checkbox-2-4" class="c-input--dark">
-    <label for="checkbox-2-4">Checkbox #4</label>
+    <label for="checkbox-2-4">Checkbox</label>
 
     <input type="checkbox" name="checkbox-2" value="checkbox-2-5" id="checkbox-2-5" class="c-input--dark" disabled checked>
-    <label for="checkbox-2-5">Checkbox #5 (checked, disabled)</label>
+    <label for="checkbox-2-5">Checkbox (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
